@@ -14,8 +14,7 @@ concurrency:
 jobs:
   activate:
     if: |
-      (github.event_name == 'schedule' && github.repository_owner == 'asciidoctor') ||
-      (github.event_name == 'push') ||
+      (github.event_name == 'schedule' && github.repository_owner == 'asciidoctor') || (github.event_name == 'push') ||
       (github.event_name == 'pull_request' && !startsWith(github.head_ref, 'docs/'))
     runs-on: ubuntu-latest
     steps:
@@ -50,6 +49,11 @@ jobs:
       with:
         ruby-version: ${{ matrix.ruby }}
         bundler-cache: ${{ github.event_name != 'schedule' }}
+    - name: Install Node.js
+      if: matrix.primary
+      uses: actions/setup-node@v3
+      with:
+        node-version: '16'
     - name: Install dependencies (scheduled build only)
       if: github.event_name == 'schedule'
       run: |
@@ -60,3 +64,7 @@ jobs:
       run: bundle exec rake lint
     - name: Run tests
       run: bundle exec ruby -w $(bundle exec ruby -e 'print File.join Gem.bindir, %q(rake)') spec
+    - name: Run smoke test for npm package
+      if: matrix.primary
+      working-directory: js
+      run: npm run ci
